Release history for katriawm

v17.02  2017-02-26
  [Changed]
  - All code specific to lemonbar has been removed, since it has been
    unmaintained for over a year.

  [Added]
  - The tutorial HOW-TO-SETUP.md has been added.

v16.12  2016-12-31
  - Minor maintenance release. No user-visible changes. I just wanted a
    clean start for 2017. :-)

v16.10  2016-10-29
  [Fixed]
  - Fix data corruption and possible crash when a client, which is
    currently being moved by the mouse, disappears.
  - Un-fullscreening clients now causes the current workspace to be
    rearranged. This fixes several bugs where you ended up with a
    "broken" tiled layout after un-fullscreening a client.

v16.09  2016-09-24
  [Fixed]
  - Limit the minimum size of windows: They can no longer be so small
    that there is not enough room left for the decorations to be drawn.
    This fixes black artifacts on tiny windows.
  - We no longer try to "optimize" the detection of changes to the
    screen layout. This fixes bugs where katriawm indeed missed some of
    these changes.

  [Changed]
  - Theming: The "tinting" model has been removed. Instead, each window
    state (normal, selected, urgency flag set) now requires one
    individual image. This means that you can use the full RGB color
    range for each state.
  - The "modern" theme has been removed (or rather, not ported to the
    new theming system).

  [Added]
  - Window titles can now be centered horizontally, see "center_title"
    in config.h.
  - _MOTIF_WM_HINTS is now evaluated (partially). We check for the
    "undecorated" hint.

v16.05  2016-05-01
  [Fixed]
  - Fix more focus issues. When "no window" is to be focused, we now
    transfer focus to an invisible window instead of to the root window.
    Especially, some VTE terminals are no longer confused about having
    focus. Sometimes, they have drawn a solid cursor instead of a hollow
    one.

  [Added]
  - "default_layout" was added to config.h.